[gd_scene load_steps=8 format=3 uid="uid://c2oe6dh3cur7x"]

[ext_resource type="Script" path="res://confirmation_menu.gd" id="1_6wj0j"]
[ext_resource type="Texture2D" uid="uid://d0q6gprf2xmyi" path="res://Assets/Confirmation Panel.png" id="1_wjjyn"]
[ext_resource type="Texture2D" uid="uid://r5kjb6j6vxut" path="res://Assets/Yes button.png" id="2_nbxd2"]
[ext_resource type="Texture2D" uid="uid://gk52o2takqpv" path="res://Assets/No button.png" id="3_5bqw5"]

[sub_resource type="Theme" id="Theme_u87gv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gxvab"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gekbt"]

[node name="ConfirmationMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6wj0j")
tween_intensity = 1.1
tween_duration = 0.3

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.270588)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.5
offset_top = -153.5
offset_right = 290.5
offset_bottom = 153.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wjjyn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = 40.0
offset_right = 226.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="YesButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_u87gv")
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_gxvab")
icon = ExtResource("2_nbxd2")
flat = true
icon_alignment = 1

[node name="NoButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_gekbt")
icon = ExtResource("3_5bqw5")
flat = true

[connection signal="pressed" from="HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
